[package]
name = "jlc_discord_bot"
version = "0.1.0"
authors = ["Sleepdealer <dreznik01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.19"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.66"
serde = "1.0.129"
dotenv = "0.15.0"
heim = {git = "https://github.com/heim-rs/heim" , features = ["memory", "process"] }
timeago = "0.3.0"
futures = "0.3.5"
regex = "1.3.9"
memchr = '2.3.*'
log = "0.4.14"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls" , "postgres"] }

[dependencies.serenity]
version = "0.10.9"
branch = "current"
git = "https://github.com/serenity-rs/serenity.git"
features = ["standard_framework", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["signal"]